# blurrifier

./: .gitignore  Benchmarks.md  CMakeLists.txt  README.md  benchmark-results.txt  benchmark-script.sh  benchmark.sh  config.h  data.csv  diagram.py  main.c  openmp.csv  results.csv  system-info.txt
